# sam3-continuously-and-automatically-evolving-chicken-detection

./: .gitignore  .gitmodules  AGENTS.md  README.md  config.py  pyproject.toml  run-all-scripts.sh
.cursor/commands/: think-deeply-to-fix.md
.dvc/: config
analysis/311-zero-shot-inference/: analysis_report.md  false_negative_details.json  false_positive_details.json  metrics_summary.json  per_image_performance.json  statistics.json
configs/: base_eval.yaml  sam3_chicken_finetune.yaml
data/: chicken_train.json.dvc  chicken_val.json.dvc
docs/plan/: plan.md
docs/prd/: prd.md
results/zero_shot_baseline/: config.yaml  config_resolved.yaml
scripts/: analyze_zero_shot_inference.py  dvc_gdrive_setup.sh  task_111_gpu_availability_check.sh  task_112_cuda_toolkit_verification.sh  task_113_vram_health_check.sh  task_114_disk_space_allocation.sh  task_121_clone_sam3_repository.sh  task_122_create_virtual_environment.sh  task_123_install_pytorch.sh  task_124_install_sam3_dependencies.sh  task_125_download_pretrained_weights.py  task_125_download_pretrained_weights.sh  task_131_wandb_initialization.py  task_131_wandb_initialization.sh  task_132_dvc_initialization.py  task_132_dvc_initialization.sh  task_133_configure_remote_storage.py  task_133_configure_remote_storage.sh  task_134_verify_logging_integration.py  task_134_verify_logging_integration.sh  task_1_1_1.sh  task_1_1_2_cuda_toolkit_verification.sh  task_1_1_3_vram_health_check.sh  task_1_1_4_disk_space_allocation.sh  task_1_2_1_clone_sam3_repository.sh  task_1_2_2_create_virtual_environment.sh  task_211_directory_structure_setup.py  task_211_directory_structure_setup.sh  task_212_label_normalization.py  task_212_label_normalization.sh  task_213_negative_sample_verification.py  task_213_negative_sample_verification.sh  task_221_image_metadata_extraction.py  task_221_image_metadata_extraction.sh  task_222_yolo_bbox_to_polygon_conversion.py  task_222_yolo_bbox_to_polygon_conversion.sh  task_223_labelme_parsing.py  task_223_labelme_parsing.sh  task_224_exhaustiveness_flagging.py  task_224_exhaustiveness_flagging.sh  (+45 more)
